[package]
name = "rwled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "net", "macros", "time"] }

smart-leds = "0.3.0"
ws2812-spi = { git = "https://github.com/smart-leds-rs/ws2812-spi-rs", branch = "dev/hosted", features = ["std"] }
rppal = { version = "0.13.1", features = ["hal"] }

palette = "0.6"
rgb = "0.8"
image = "0.23"

thiserror = "1.0"
async-trait = "0.1.57"
futures = "0.3.24"

# hue needs DTLS...
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
webrtc-util = "0.6.0"
webrtc-dtls = "0.6.0"
serde_json = "1"
